jaeger integration with spring boot fiegn clinet app

--- a/name-generator-service/src/main/resources/application.properties
+++ b/name-generator-service/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 server.port=8080
 logging.level.io.jaegertracing=DEBUG
+opentracing.jaeger.udp-sender.host=localhost
+opentracing.jaeger.udp-sender.port=6831
+opentracing.jaeger.log-spans=true
+
+scientist.service.prefix.url=http://localhost:8090
+
+animal.service.prefix.url=http://localhost:9000
