--- a/animal-name-service/pom.xml
+++ b/animal-name-service/pom.xml
@@ -25,9 +25,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>io.jaegertracing</groupId>
-			<artifactId>jaeger-client</artifactId>
-			<version>0.34.0</version>
+			<groupId>io.opentracing.contrib</groupId>
+			<artifactId>opentracing-spring-jaeger-web-starter</artifactId>
+			<version>3.1.2</version>
 		</dependency>
 
 
