--- a/animal-name-service/src/main/resources/application.properties
+++ b/animal-name-service/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=9000
+opentracing.jaeger.udp-sender.host=localhost
+opentracing.jaeger.udp-sender.port=6831
+opentracing.jaeger.log-spans=true
