--- a/scientist-name-service/src/main/resources/application.properties
+++ b/scientist-name-service/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8090
+opentracing.jaeger.udp-sender.host=localhost
+opentracing.jaeger.udp-sender.port=6831
+opentracing.jaeger.log-spans=true
