--- a/animal-name-service/pom.xml
+++ b/animal-name-service/pom.xml
@@ -24,6 +24,18 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+        <dependency>
+            <groupId>com.shekhargulati</groupId>
+            <artifactId>strman</artifactId>
+            <version>0.4.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>2.2.3.RELEASE</version>
+        </dependency>
+
 <!--		<dependency>-->
 <!--			<groupId>io.opentracing.contrib</groupId>-->
 <!--			<artifactId>opentracing-spring-jaeger-cloud-starter</artifactId>-->
