--- a/animal-name-service/src/main/resources/application.properties
+++ b/animal-name-service/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.application.name=animal-name-service
 opentracing.jaeger.udp-sender.host=localhost
 opentracing.jaeger.udp-sender.port=6831
 opentracing.jaeger.log-spans=true
+
+scientist.service.prefix.url=http://localhost:8090
