--- a/bootstrap/Dockerfile-Name
+++ b/bootstrap/Dockerfile-Name
@@ -1,4 +1,4 @@
-FROM registry.cn-hangzhou.aliyuncs.com/choerodon-tools/javabase:0.8.0
+FROM openjdk:8-jdk-alpine
 COPY name-generator-service-0.0.1-SNAPSHOT.jar /app.jar
 
 CMD java $JAVA_OPTS -jar /app.jar
