--- a/bootstrap/k8s/name-gateway.yml
+++ b/bootstrap/k8s/name-gateway.yml
@@ -25,7 +25,7 @@ spec:
   http:
   - match:
     - uri:
-        exact: /api/v1/names/random
+        prefix: /api/v1
     route:
     - destination:
         host: name-generator-service
